Create and update course

--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -9,16 +9,16 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img src="https://avatar-redirect.appspot.com/google/109023826614717592641?size=400" alt="" class="user-avatar">
+            <img src="https://files.fullstack.edu.vn/f8-prod/user_photos/208756/6298349ea297a.jpg" alt="" class="user-avanta">
             Vân Mint
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/courses/create">Đăng khóa học</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a>
+            <a class="dropdown-item" href="/me/stored/courses">Khoá học của tôi</a>
             <a class="dropdown-item" href="/me/stored/news">Bài viết của tôi</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Đăng xuất</a>
+            <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
       </ul>
