--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -18,3 +18,12 @@ h1 {
   border-radius: 50%;
   margin-right: 4px;
 }
+
+a {
+  text-decoration: none;
+}
+
+.checkbox-select-all {
+  width: 160px;
+  margin: 0 16px;
+}
