--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4">
+<form class="mt-4" name="container-form" method="POST" action="/courses/handle-reject-action">
 
   <div>
 
@@ -7,25 +7,49 @@
         Trở lại
       </a>
 
-    <h3>Khóa học đã xoá</h3>
+    <h3 class="mt-4">Khóa học đã xoá</h3>
   </div>
+
+  <div class="mt-4 d-flex align-items-center">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
+        <label class="form-check-label" for="checkbox-all">
+          Chọn tất cả
+        </label>
+      </div>
+    
+      <select class="form-control form-control-sm checkbox-select-all" name="action" required>
+        <option value="">-- Hành động --</option>
+        <option value="reject">Khôi phục</option>
+        <option value="destroy">Xoá vĩnh viễn</option>
+
+      </select>
+    
+      <button class="btn btn-primary btn-sm btn-check-all-submit" disabled >Thực hiện</button>
+    </div>
 
     <table class="table mt-4">
         <thead>
             <tr>
+                <th scope="col">#</th>
                 <th scope="col">STT</th>
                 <th scope="col">Tên khóa học</th>
                 <th scope="col">Trình độ</th>
-                <th scope="col" colspan="2">Thời gian tạo</th>
+                <th scope="col" colspan="2">Thời gian xoá</th>
             </tr>
         </thead>
         <tbody>
             {{#each courses}}
             <tr>
-                <th scope="row">{{sum @index 1}}</th>
+                <td>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}">
+                  </div>
+                </td>
+                <th scope="row" class="text-center">{{sum @index 1}}</th>
                 <td>{{this.name}}</td>
                 <td>{{this.level}}</td>
-                <td>{{this.createdAt}}</td>
+                <td>{{this.deletedAt}}</td>
                 <td>
                     <a href="" class="btn btn-link btn-restore" data-id="{{this._id}}">Khôi phục</a>
                     <a href="" class="btn btn-link" data-toggle="modal" data-id="{{this._id}}" data-target="#delete-course-modal">Xóa vĩnh viễn</a>
@@ -42,7 +66,7 @@
             {{/each}}
         </tbody>
     </table>
-</div>
+</form>
 
 
 
@@ -77,7 +101,13 @@
         var deleteForm = document.forms['delete-course-form'];
         var restoreForm = document.forms['restore-course-form'];
         var btnDeleteCourse = document.getElementById('btn-delete-course');
+        var containerForm = $('form[name="container-form"]');
         var restoreBtn = $('.btn-restore');
+        var checkboxAll = $('#checkbox-all')
+        var courseItemCheckbox = $('input[name="courseIds[]"]')
+        var checkAllSubmit = $('.btn-check-all-submit')
+
+
         // When dialog confirm clicked
         $('#delete-course-modal').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget);
@@ -97,6 +127,55 @@
           restoreForm.action = '/courses/' + courseId + '/restore?_method=PATCH';
           restoreForm.submit();
         });
+
+        {{!-- checkbox all change: nếu bấm check tất cả thì tất cả các item con đều check --}}
+        checkboxAll.change( function() {
+          var isCheckedAll = $(this).prop('checked'); {{!-- trả về true/false --}}
+
+          if (isCheckedAll) {
+            courseItemCheckbox.prop('checked', true);
+          } else {
+            courseItemCheckbox.prop('checked', false);
+          }
+
+          renderCheckAllSubmitBtn();
+        })
+
+
+        {{!-- Course item checkbox clicked: nếu có 1 item k check thì sẽ phải bỏ check tất cả --}}
+        courseItemCheckbox.change( function() {
+          var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length;
+
+          checkboxAll.prop('checked', isCheckedAll);
+          renderCheckAllSubmitBtn();
+          
+        })
+
+        {{!-- loại bỏ hành vi khi disable nút checkAllSubmit thì ấn vào thì vẫn submit. 
+        Khi có sự kiện onsubmit trên form xảy ra,  sẽ kiểm tra nút thưucj hiên có "disabled" hay k, nếu có thì sẽ k cho submit và gọi e.prevent... Hành vi mặc định có validate 
+        --}}
+        containerForm.on('submit', function(e) {
+          var isSubmitable = !checkAllSubmit.hasClass('disabled');
+          if (!isSubmitable) {
+            e.preventDefault();
+          }
+        })
+
+
+
+        {{!-- Hàm re-render nút thực hiện: khi checkall thì nút thực hiện được sáng lên --}}
+
+        function renderCheckAllSubmitBtn() {
+          var checkedCount = $('input[name="courseIds[]"]:checked').length;
+
+          if (checkedCount > 0) {
+            checkAllSubmit.attr('disabled', false);
+          } else {
+            checkAllSubmit.attr('disabled', true);
+          }
+          
+          console.log(checkedCount)
+        }
     });
 </script>
 
