--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -14,9 +14,9 @@
         <div class="form-group">
         <label class="form-input" for="gender-input">Từ khoá</label>
         <select name="gender" class="form-control" id="gender-input" >
-            <option value="">---Chọn giới tính---</option>
-            <option value="male">Nam</option>
-            <option value="femal">Nữ</option>
+            <option value="">---Chọn trình độ---</option>
+            <option value="male">Trình độ cơ bản</option>
+            <option value="femal">Trình độ nâng cao</option>
         <select/>
     </div>
 
